--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,10 +10,15 @@ set(ASYNCNET_TESTS_SOURCES
 	"requestor_test.cpp"
 	"queue_test.cpp"
 	"session_test.cpp"
+	"request_test.cpp"
 )
 set(ASYNC_NETWORK_TESTS_HEADERS
 	"catch_amalgamated.hpp"
 )
+
+if (ASYNCNET_BUILD_TESTS_NETWORK)
+	add_definitions(-DASYNCNET_ENABLE_TESTS_NETWORK)
+endif()
 
 add_executable(asyncnetTests ${ASYNCNET_TESTS_SOURCES} ${ASYNCNET_TESTS_HEADERS})
 
