Fix CMake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,6 @@ project(asyncnet VERSION 2.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CXX_STANDARD_REQUIRED ON)
 
-set(ASYNCNET_LINK_LIBRARIES)
-
-set(ASYNCNET_INCLUDE_DIRS $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>)
-set(ASYNCNET_LINK_INCLUDE_DIRS
-	${NETWORK_INCLUDE_DIRS}
-	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-)
-
 # ---- FIND DEPENDENCIES
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
@@ -33,33 +25,29 @@ find_package(Boost REQUIRED COMPONENTS json)
 find_package(CURLpp REQUIRED)
 find_package(libcoro REQUIRED)
 
-list(APPEND ASYNCNET_LINK_INCLUDE_DIRS
-	${Boost_INCLUDE_DIRS}
-	${CURLPP_INCLUDE_DIRS}
-	${LIBCORO_INCLUDE_DIRS}
-)
-list(APPEND ASYNCNET_LINK_LIBRARIES
-	${Boost_LIBRARIES}
-	${CURLPP_LIBRARIES}
-	${LIBCORO_LIBRARIES}
-)
-
-include_directories(
-	${ASYNCNET_LINK_INCLUDE_DIRS}
-)
-
 # ---- ADD LIBRARY
 
 file(GLOB_RECURSE ASYNCNET_HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/include/*.hpp")
 file(GLOB_RECURSE ASYNCNET_SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
 
-include_directories("${CMAKE_CURRENT_LIST_DIR}/include")
-
-add_definitions(-DCPPCORO_COMPILER_SUPPORTS_SYMMETRIC_TRANSFER=1)
-
 add_library(asyncnet STATIC ${ASYNCNET_HEADER_FILES} ${ASYNCNET_SOURCE_FILES})
 
-set(ASYNCNET_LIBRARIES ${ASYNCNET_LINK_LIBRARIES} asyncnet)
+target_include_directories(asyncnet PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
+	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+
+target_include_directories(asyncnet PUBLIC
+	$<BUILD_INTERFACE:${Boost_INCLUDE_DIRS}>
+	$<BUILD_INTERFACE:${CURLPP_INCLUDE_DIRS}>
+	$<BUILD_INTERFACE:${LIBCORO_INCLUDE_DIRS}>
+)
+
+target_link_libraries(asyncnet PUBLIC
+	$<BUILD_INTERFACE:${Boost_LIBRARIES}>
+	$<BUILD_INTERFACE:${CURLPP_LIBRARIES}>
+	$<BUILD_INTERFACE:${LIBCORO_LIBRARIES}>
+)
 
 if (ASYNCNET_BUILD_TESTS)
 	enable_testing()
@@ -83,15 +71,22 @@ configure_package_config_file(
 	NO_CHECK_REQUIRED_COMPONENTS_MACRO
 )
 
+configure_file("asyncnet.pc.in" "asyncnet.pc" @ONLY)
+
 # always prefix with lib*
-set(CMAKE_STATIC_LIBRARY_PREFIX_CXX lib)
+set_target_properties(asyncnet PROPERTIES PREFIX "lib")
+
+install(DIRECTORY "include/" DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/asyncnet.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+
+install(TARGETS libcoro curlpp_static)
 
 install(TARGETS asyncnet
 	EXPORT asyncnet-targets
-	RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
-	ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-	LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-	INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
 install(EXPORT asyncnet-targets
