--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,4 @@
 
-include_directories(
-	${ASYNCNET_INCLUDE_DIRS}
-)
-
 set(ASYNCNET_TESTS_SOURCES
 	"catch_amalgamated.cpp"
 	"net_types_test.cpp"
@@ -24,8 +20,6 @@ add_executable(asyncnetTests ${ASYNCNET_TESTS_SOURCES} ${ASYNCNET_TESTS_HEADERS}
 
 set_property(TARGET asyncnetTests PROPERTY CXX_STANDARD 23)
 
-message(STATUS "asyncnet libraries: ${ASYNCNET_LIBRARIES}")
-
 target_link_libraries(asyncnetTests PRIVATE 
-	${ASYNCNET_LIBRARIES}
+	asyncnet
 )
